tests/fixtures/positive/structure/PreferSwitchOverIfElseChains_ORDifferentVars.cls
public class Example {
    public void method(String value, String other) {
        if (value == 'a' || other == 'b') {
        }
    }
}

