tests/fixtures/negative/design/PreferSwitchOverIfElseChains_Mixed.cls
public class Example {
    public void method(String value) {
        if (value == 'a') {
        } else if (value == 'b') {
        }
        if (value == 'c') {
        }
        if (value == 'd') {
        }
    }
}

